--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "bs4>=0.0.2",
+    "httpx>=0.28.1",
+    "lxml>=5.3.2",
+    "mcp[cli]>=1.6.0",
+    "pydantic>=2.11.3",
     "python-dotenv>=1.0.1",
 ]
 
@@ -36,6 +41,7 @@ warn_unused_ignores = true
 
 [dependency-groups]
 dev = [
+    "ipykernel>=6.29.5",
     "mypy>=1.14.1",
     "pytest>=8.3.4",
     "pytest-cov>=6.0.0",
