--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "mcp[cli]>=1.6.0",
     "pydantic>=2.11.3",
     "python-dotenv>=1.0.1",
+    "selenium>=4.31.0",
 ]
 
 [tool.ruff]
