プロジェクト名を「mcp-tutorial」から「keiba-mcp」に変更し、関連する設定ファイルを更新

--- a/.devcontainer/compose.yaml
+++ b/.devcontainer/compose.yaml
@@ -4,7 +4,7 @@ services:
     network_mode: service:selenium
     command: sleep infinity
     volumes:
-      - ..:/workspaces/mcp-tutorial:cached
+      - ..:/workspaces/keiba-mcp:cached
 
   selenium:
     image: selenium/standalone-chromium
